horizontal scroll bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 #about {
     background-color: #f3f3f3;
 	padding: 120px 0px 60px 0px;
-	margin: 0;
 }
 
 
@@ -14,7 +13,6 @@
 	
     background-color: #ccc;
 	padding: 50px 0px 110px 0px;
-	margin: 0;
 
 }
 
@@ -35,7 +33,6 @@
 --------------------------------------------------------------------------------------------------------------- */
 #social {
     background-color: #7d7d7d;
-    margin: 0px 0px 0px 0px;
 	padding: 0px 0px 0px 0px;
 	text-align: center;
 	padding: 50px 0px 80px 0px;
